# incubator-milagro-crypto-rust

./: .gitignore  BenchtestALL.rs  Cargo.toml  README.md  TestALL.rs  deploy.token  readme.md
.circleci/: config.yml
benches/: BenchtestALL.rs  bls381.rs  bn254.rs  ed25519.rs  goldilocks.rs  nist256.rs  rsa2048.rs  rsa3072.rs  rsa4096.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: bls381_deserialize_g1.rs  bls381_deserialize_g2.rs  bls381_secret_key_from_bytes.rs
src/: aes.rs  big.rs  bls.rs  bls192.rs  bls256.rs  bls381.rs  dbig.rs  ecdh.rs  ecp.rs  ecp2.rs  ecp4.rs  ecp8.rs  errors.rs  ff.rs  fp.rs  fp12.rs  fp16.rs  fp2.rs  fp24.rs  fp4.rs  fp48.rs  fp8.rs  gcm.rs  hash256.rs  hash384.rs  hash512.rs  hash_to_curve.rs  lib.rs  mpin.rs  mpin192.rs  mpin256.rs  nhs.rs  pair.rs  pair192.rs  pair256.rs  rand.rs  rsa.rs  sha3.rs  types.rs
src/bls381/: basic.rs  core.rs  iso.rs  iso_constants_x32.rs  iso_constants_x64.rs  message_augmentation.rs  mod.rs  proof_of_possession.rs  utils.rs
src/roms/: rom_anssi_32.rs  rom_anssi_64.rs  rom_bls24_32.rs  rom_bls24_64.rs  rom_bls381_32.rs  rom_bls381_64.rs  rom_bls381g1_32.rs  rom_bls381g1_64.rs  rom_bls381g2_32.rs  rom_bls381g2_64.rs  rom_bls383_32.rs  rom_bls383_64.rs  rom_bls461_32.rs  rom_bls461_64.rs  rom_bls48_32.rs  rom_bls48_64.rs  rom_bn254CX_32.rs  rom_bn254CX_64.rs  rom_bn254_32.rs  rom_bn254_64.rs  rom_bn254cx_32.rs  rom_bn254cx_64.rs  rom_brainpool_32.rs  rom_brainpool_64.rs  rom_c25519_32.rs  rom_c25519_64.rs  rom_c41417_32.rs  rom_c41417_64.rs  rom_ed25519_32.rs  rom_ed25519_64.rs  rom_fp256bn_32.rs  rom_fp256bn_64.rs  rom_fp512bn_32.rs  rom_fp512bn_64.rs  rom_goldilocks_32.rs  rom_goldilocks_64.rs  rom_hifive_32.rs  rom_hifive_64.rs  rom_nist256_32.rs  rom_nist256_64.rs  (+24 more)
src/test_utils/: mod.rs  test_vector_structs.rs
tests/: test_all.rs  test_bls.rs  test_nhs.rs
