[package]
name = "amcl"
version = "0.2.0"
authors = ["Nikita Khateev <nikita.khateev@dsr-corporation.com>"]

description = "The Apache Milagro Cryptographic Library (version 3)"
license = "Apache-2.0"
repository = "https://github.com/milagro-crypto/amcl"

[dependencies]
hex = "0.3"
lazy_static = "1.2.0"

[dev-dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
criterion = "0.3.0"
rand = "0.7.2"

[features]
default = ["bn254"]
all = [
  "anssi","bls24","bls48","bls381","bls383","bls461","bn254","bn254cx",
  "brainpool","c25519","c41417","ed25519","fp256BN","fp512BN","goldilocks","hifive",
  "nist256","nist384","nist521","nums256e","nums256w","nums384e","nums384w","nums512e",
  "nums512w","rsa2048","rsa3072","rsa4096","secp256k1",
]
anssi = []
bls24 = []
bls48 = []
bls381 = []
bls383 = []
bls461 = []
bn254 = []
bn254cx = []
brainpool = []
c25519 = []
c41417 = []
ed25519 = []
fp256BN = []
fp512BN = []
goldilocks = []
hifive = []
nist256 = []
nist384 = []
nist521 = []
nums256e = []
nums256w = []
nums384e = []
nums384w = []
nums512e = []
nums512w = []
rsa2048 = []
rsa3072 = []
rsa4096 = []
secp256k1 = []
