[package]
name = "amcl"
version = "0.3.0"
authors = ["Nikita Khateev <nikita.khateev@dsr-corporation.com>", "Kirk Baird <baird.k@outlook.com>"]
description = "The Apache Milagro Cryptographic Library (version 3)"
license = "Apache-2.0"
repository = "https://github.com/apache/incubator-milagro-crypto-rust"
edition = "2018"

[dev-dependencies]
hex = "0.3"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
criterion = "0.3.0"
rand = "0.7.2"

[[bench]]
name = "bls381"
harness = false

[[bench]]
name = "ed25519"
harness = false

[[bench]]
name = "goldilocks"
harness = false

[[bench]]
name = "nist256"
harness = false

[[bench]]
name = "bn254"
harness = false

[[bench]]
name = "rsa2048"
harness = false

[[bench]]
name = "rsa3072"
harness = false

[[bench]]
name = "rsa4096"
harness = false

[features]
default = ["bn254"]
all = [
  "anssi","bls24","bls48","bls381","bls383","bls461","bn254","bn254cx",
  "brainpool","c25519","c41417","ed25519","fp256bn","fp512bn","goldilocks","hifive",
  "nist256","nist384","nist521","nums256e","nums256w","nums384e","nums384w","nums512e",
  "nums512w","rsa2048","rsa3072","rsa4096","secp256k1",
]
anssi = []
bls24 = []
bls48 = []
bls381 = []
bls383 = []
bls461 = []
bn254 = []
bn254cx = []
brainpool = []
c25519 = []
c41417 = []
ed25519 = []
fp256bn = []
fp512bn = []
goldilocks = []
hifive = []
nist256 = []
nist384 = []
nist521 = []
nums256e = []
nums256w = []
nums384e = []
nums384w = []
nums512e = []
nums512w = []
rsa2048 = []
rsa3072 = []
rsa4096 = []
secp256k1 = []
bench = ["all"]
